<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
        android:id="@+id/yj"
        android:src="@mipmap/btn_back_detail_pressed_night"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/text"
        android:layout_centerHorizontal="true"
        android:text="@string/login_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/input_phone"

            />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/input_password"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_below="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/zc_zh"
            android:text="@string/zc_zh"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/wjmm"
            android:text="@string/wjmm"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_below="@+id/linear2"
        android:text="登陆"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
